--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,121 +4,10 @@ body {
 .App {
   margin: 2vw;
 }
-.Card {
-  width: 100%;
-  height: 25vh;
-  background-color: white;
-}
-.CardRow2 {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 100%;
-  height: 50vh;
-  background-color: white;
-}
-.CardRow2Grid {
-  display: grid;
-  grid-template-rows: auto;
-}
-
-/* .grid1 {
-  grid-column-start: 1;
-  grid-column-end: 1;
-}
-.grid2{
-    grid-column-start: 1;
-    grid-column-end: 1;
-}
-
-.grid3{
-    grid-column-start: 1;
-    grid-column-end: 1;
-}
-.grid4{
-    grid-column-start: 1;
-    grid-column-end: 1;
-} */
-
-.CardsInRow2One {
-  width: 100%;
-  height: 100%;
-  background-color: red;
-}
-
-.CardsInRow2Two {
-  width: 100%;
-  height: 100%;
-  background-color: orange;
-}
-.CardsInRow2Three {
-  width: 100%;
-  height: 100%;
-  background-color: yellow;
-}
-.CardsInRow2Four {
-  width: 100%;
-  height: 100%;
-  background-color: blue;
-}
-.Graph {
-  width: 100%;
-  height: 25vh;
-  background-color: white;
-}
-.maingrid {
-  display: grid;
-  width: 30%;
-}
-.grid1 {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-}
-.grid2 {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-}
-.smallDiv {
-  width: 50%;
-  border: 1px solid black;
-}
-.col-4 {
-  width: 100% !important;
-}
-.GraphAndCard {
-  gap: 2%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  background-color: white;
-}
-.row {
-  margin-top: 2vw !important;
-}
-
-.big{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 1.5rem;
-
-}
-.small{
-  height: 23vh;
-  background-color:white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.circle{
-  width:125px;
-  height: 125px;
-  border: 5px solid black;
-  border-radius: 50%;
-  display: flex;
-  justify-content:center;
-  align-items: center;
-}
 
 
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: red;
+  }
+}
